--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Pixel Creation 2</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="data:;base64,=">
 </head>
 <body>
     <div id="root"></div>
